<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDABD"
    android:orientation="vertical"
    tools:context="rsarschoolmodel.com.rsarschoolmodel.MainActivity">

    <include
        android:id="@+id/toolbarRegister"
        layout="@layout/register_page_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:background="@drawable/register_page_border_design"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/edtActivationCode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/activation_code"
                            android:background="@color/white"
                            android:layout_margin="10dp"
                            android:maxLines="1" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/name"
                            android:background="@color/white"
                            android:layout_margin="10dp"
                            android:maxLines="1" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/edtEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:maxLines="1"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/edtMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/mobile_no"
                            android:background="@color/white"
                            android:inputType="number"
                            android:maxLength="10"
                            android:layout_margin="10dp" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="@dimen/_5sdp"
                            android:background="@drawable/submit_button_design_background"
                            android:text="@string/submit"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtForgets"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/forget_details"
                            android:textColor="#E40808"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginVertical="@dimen/_5sdp"
                            android:layout_weight="3"
                            android:background="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_5sdp"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/txtPrivacyPolicy"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/privacy_policy"
                                android:linksClickable="true"
                                android:textColor="#000000"
                                android:textSize="19sp" />

                            <TextView
                                android:id="@+id/txtAboutUs"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/about_us"
                                android:textColor="#000000"
                                android:textSize="19sp" />
                            <!--   <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_facebook" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:src="@drawable/ic_google_plus" />-->
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="#000000" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="#000000" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="65dp"
            android:background="@drawable/register_page_toolbar_background"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FE9D8A">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:padding="2dp"
                    android:src="@drawable/logo"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#CB443E"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/powered_by_rachna_sagar"
        android:textColor="@color/white" />

</LinearLayout>